--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,7 +4,7 @@
 @import './components/components';
 
 body {
-  font-family: "Nunito";
+  font-family: "Montserrat";
   letter-spacing: 0.0625em;
   font-size: $base-size;
 
